# bobi_models

./: CMakeLists.txt  README.md  package.xml
launch/: fishbot_gazebo.launch  fishbot_rviz.launch  fishbot_simu.launch  lurebot_gazebo.launch  lurebot_rviz.launch  lurebot_simu.launch  setup_gazebo.launch
urdf/: fishbot_simple.urdf.xacro  lurebot_simple.gazebo  lurebot_simple.urdf.xacro  setup.urdf.xacro
