<?xml version="1.0"?>
<package format="2">
  <name>bobi_models</name>

  <version>0.1.0</version>
  <description>Simulation models for the lurebot</description>
  <maintainer email="b.papaspyros@gmail.com">Vaios Papaspyros</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
